src/punchcard/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_unit_list
Rule 2     program_unit_list -> program_unit
Rule 3     program_unit_list -> program_unit_list program_unit
Rule 4     program_unit -> main_program
Rule 5     program_unit -> function_subprogram
Rule 6     program_unit -> subroutine_subprogram
Rule 7     main_program -> PROGRAM IDENTIFIER body END
Rule 8     function_subprogram -> type_spec FUNCTION IDENTIFIER ( param_list ) body END
Rule 9     subroutine_subprogram -> SUBROUTINE IDENTIFIER ( param_list ) body END
Rule 10    body -> declaration_section statement_section
Rule 11    declaration_section -> empty
Rule 12    declaration_section -> declaration_section declaration
Rule 13    declaration -> type_spec var_list
Rule 14    type_spec -> DT_INTEGER
Rule 15    type_spec -> DT_REAL
Rule 16    type_spec -> DT_DOUBLE_PRECISION
Rule 17    type_spec -> DT_LOGICAL
Rule 18    type_spec -> DT_CHARACTER
Rule 19    var_list -> var_decl
Rule 20    var_list -> var_list , var_decl
Rule 21    var_decl -> IDENTIFIER
Rule 22    var_decl -> IDENTIFIER ( dim_list )
Rule 23    dim_list -> expr
Rule 24    dim_list -> dim_list , expr
Rule 25    statement_section -> empty
Rule 26    statement_section -> statement_section statement
Rule 27    statement -> LIT_INT statement_body
Rule 28    statement -> statement_body
Rule 29    statement_body -> assignment_stmt
Rule 30    statement_body -> goto_stmt
Rule 31    statement_body -> if_stmt
Rule 32    statement_body -> do_stmt
Rule 33    statement_body -> continue_stmt
Rule 34    statement_body -> print_stmt
Rule 35    statement_body -> read_stmt
Rule 36    statement_body -> stop_stmt
Rule 37    statement_body -> return_stmt
Rule 38    statement_body -> call_stmt
Rule 39    call_stmt -> CALL IDENTIFIER ( arg_list )
Rule 40    assignment_stmt -> lvalue = expr
Rule 41    lvalue -> IDENTIFIER
Rule 42    lvalue -> IDENTIFIER ( arg_list )
Rule 43    goto_stmt -> GOTO LIT_INT
Rule 44    if_stmt -> IF ( expr ) THEN statement_section ENDIF
Rule 45    if_stmt -> IF ( expr ) THEN statement_section ELSE statement_section ENDIF
Rule 46    if_stmt -> IF ( expr ) statement_body
Rule 47    do_stmt -> DO LIT_INT IDENTIFIER = expr , expr do_body
Rule 48    do_stmt -> DO LIT_INT IDENTIFIER = expr , expr , expr do_body
Rule 49    do_body -> do_inner_stmts LIT_INT CONTINUE
Rule 50    do_inner_stmts -> empty
Rule 51    do_inner_stmts -> do_inner_stmts do_inner_statement
Rule 52    do_inner_statement -> assignment_stmt
Rule 53    do_inner_statement -> goto_stmt
Rule 54    do_inner_statement -> if_stmt
Rule 55    do_inner_statement -> do_stmt
Rule 56    do_inner_statement -> print_stmt
Rule 57    do_inner_statement -> read_stmt
Rule 58    do_inner_statement -> stop_stmt
Rule 59    do_inner_statement -> return_stmt
Rule 60    do_inner_statement -> call_stmt
Rule 61    do_inner_statement -> LIT_INT assignment_stmt
Rule 62    do_inner_statement -> LIT_INT goto_stmt
Rule 63    do_inner_statement -> LIT_INT if_stmt
Rule 64    do_inner_statement -> LIT_INT do_stmt
Rule 65    do_inner_statement -> LIT_INT print_stmt
Rule 66    do_inner_statement -> LIT_INT read_stmt
Rule 67    do_inner_statement -> LIT_INT stop_stmt
Rule 68    do_inner_statement -> LIT_INT return_stmt
Rule 69    do_inner_statement -> LIT_INT call_stmt
Rule 70    continue_stmt -> CONTINUE
Rule 71    print_stmt -> PRINT * , output_list
Rule 72    print_stmt -> PRINT LIT_STRING , output_list
Rule 73    print_stmt -> PRINT *
Rule 74    read_stmt -> READ * , input_list
Rule 75    read_stmt -> READ *
Rule 76    stop_stmt -> STOP
Rule 77    return_stmt -> RETURN
Rule 78    param_list -> empty
Rule 79    param_list -> param_list_mult
Rule 80    param_list_mult -> IDENTIFIER
Rule 81    param_list_mult -> param_list_mult , IDENTIFIER
Rule 82    arg_list -> empty
Rule 83    arg_list -> arg_list_mult
Rule 84    arg_list_mult -> expr
Rule 85    arg_list_mult -> arg_list_mult , expr
Rule 86    output_list -> expr
Rule 87    output_list -> output_list , expr
Rule 88    input_list -> lvalue
Rule 89    input_list -> input_list , lvalue
Rule 90    expr -> logical_expr
Rule 91    logical_expr -> logical_expr LOP_OR logical_and
Rule 92    logical_expr -> logical_and
Rule 93    logical_and -> logical_and LOP_AND logical_not
Rule 94    logical_and -> logical_not
Rule 95    logical_not -> LOP_NOT logical_not
Rule 96    logical_not -> comparison
Rule 97    comparison -> comparison rel_op arith_expr
Rule 98    comparison -> arith_expr
Rule 99    rel_op -> LOP_EQ
Rule 100   rel_op -> LOP_NE
Rule 101   rel_op -> LOP_LE
Rule 102   rel_op -> LOP_LT
Rule 103   rel_op -> LOP_GE
Rule 104   rel_op -> LOP_GT
Rule 105   arith_expr -> arith_expr arith_op term
Rule 106   arith_op -> +
Rule 107   arith_op -> -
Rule 108   arith_expr -> term
Rule 109   term -> term term_op factor
Rule 110   term_op -> *
Rule 111   term_op -> /
Rule 112   term -> factor
Rule 113   factor -> unary OP_POWER factor
Rule 114   factor -> unary
Rule 115   unary -> + unary
Rule 116   unary -> - unary
Rule 117   unary -> primary
Rule 118   primary -> ( expr )
Rule 119   primary -> LIT_INT
Rule 120   primary -> LIT_FLOAT
Rule 121   primary -> LIT_DOUBLE
Rule 122   primary -> LIT_STRING
Rule 123   primary -> LIT_BOOLEAN
Rule 124   primary -> IDENTIFIER
Rule 125   primary -> IDENTIFIER ( arg_list )
Rule 126   empty -> <empty>

Terminals, with rules where they appear

(                    : 8 9 22 39 42 44 45 46 118 125
)                    : 8 9 22 39 42 44 45 46 118 125
*                    : 71 73 74 75 110
+                    : 106 115
,                    : 20 24 47 48 48 71 72 74 81 85 87 89
-                    : 107 116
/                    : 111
=                    : 40 47 48
CALL                 : 39
CONTINUE             : 49 70
DO                   : 47 48
DT_CHARACTER         : 18
DT_DOUBLE_PRECISION  : 16
DT_INTEGER           : 14
DT_LOGICAL           : 17
DT_REAL              : 15
ELSE                 : 45
END                  : 7 8 9
ENDIF                : 44 45
FUNCTION             : 8
GOTO                 : 43
IDENTIFIER           : 7 8 9 21 22 39 41 42 47 48 80 81 124 125
IF                   : 44 45 46
LIT_BOOLEAN          : 123
LIT_DOUBLE           : 121
LIT_FLOAT            : 120
LIT_INT              : 27 43 47 48 49 61 62 63 64 65 66 67 68 69 119
LIT_STRING           : 72 122
LOP_AND              : 93
LOP_EQ               : 99
LOP_GE               : 103
LOP_GT               : 104
LOP_LE               : 101
LOP_LT               : 102
LOP_NE               : 100
LOP_NOT              : 95
LOP_OR               : 91
OP_POWER             : 113
PRINT                : 71 72 73
PROGRAM              : 7
READ                 : 74 75
RETURN               : 77
STOP                 : 76
SUBROUTINE           : 9
THEN                 : 44 45
error                : 

Nonterminals, with rules where they appear

arg_list             : 39 42 125
arg_list_mult        : 83 85
arith_expr           : 97 98 105
arith_op             : 105
assignment_stmt      : 29 52 61
body                 : 7 8 9
call_stmt            : 38 60 69
comparison           : 96 97
continue_stmt        : 33
declaration          : 12
declaration_section  : 10 12
dim_list             : 22 24
do_body              : 47 48
do_inner_statement   : 51
do_inner_stmts       : 49 51
do_stmt              : 32 55 64
empty                : 11 25 50 78 82
expr                 : 23 24 40 44 45 46 47 47 48 48 48 84 85 86 87 118
factor               : 109 112 113
function_subprogram  : 5
goto_stmt            : 30 53 62
if_stmt              : 31 54 63
input_list           : 74 89
logical_and          : 91 92 93
logical_expr         : 90 91
logical_not          : 93 94 95
lvalue               : 40 88 89
main_program         : 4
output_list          : 71 72 87
param_list           : 8 9
param_list_mult      : 79 81
primary              : 117
print_stmt           : 34 56 65
program              : 0
program_unit         : 2 3
program_unit_list    : 1 3
read_stmt            : 35 57 66
rel_op               : 97
return_stmt          : 37 59 68
statement            : 26
statement_body       : 27 28 46
statement_section    : 10 26 44 45 45
stop_stmt            : 36 58 67
subroutine_subprogram : 6
term                 : 105 108 109
term_op              : 109
type_spec            : 8 13
unary                : 113 114 115 116
var_decl             : 19 20
var_list             : 13 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_unit_list
    (2) program_unit_list -> . program_unit
    (3) program_unit_list -> . program_unit_list program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . function_subprogram
    (6) program_unit -> . subroutine_subprogram
    (7) main_program -> . PROGRAM IDENTIFIER body END
    (8) function_subprogram -> . type_spec FUNCTION IDENTIFIER ( param_list ) body END
    (9) subroutine_subprogram -> . SUBROUTINE IDENTIFIER ( param_list ) body END
    (14) type_spec -> . DT_INTEGER
    (15) type_spec -> . DT_REAL
    (16) type_spec -> . DT_DOUBLE_PRECISION
    (17) type_spec -> . DT_LOGICAL
    (18) type_spec -> . DT_CHARACTER

    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 9
    DT_INTEGER      shift and go to state 10
    DT_REAL         shift and go to state 11
    DT_DOUBLE_PRECISION shift and go to state 12
    DT_LOGICAL      shift and go to state 13
    DT_CHARACTER    shift and go to state 14

    program                        shift and go to state 1
    program_unit_list              shift and go to state 2
    program_unit                   shift and go to state 3
    main_program                   shift and go to state 4
    function_subprogram            shift and go to state 5
    subroutine_subprogram          shift and go to state 6
    type_spec                      shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> program_unit_list .
    (3) program_unit_list -> program_unit_list . program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . function_subprogram
    (6) program_unit -> . subroutine_subprogram
    (7) main_program -> . PROGRAM IDENTIFIER body END
    (8) function_subprogram -> . type_spec FUNCTION IDENTIFIER ( param_list ) body END
    (9) subroutine_subprogram -> . SUBROUTINE IDENTIFIER ( param_list ) body END
    (14) type_spec -> . DT_INTEGER
    (15) type_spec -> . DT_REAL
    (16) type_spec -> . DT_DOUBLE_PRECISION
    (17) type_spec -> . DT_LOGICAL
    (18) type_spec -> . DT_CHARACTER

    $end            reduce using rule 1 (program -> program_unit_list .)
    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 9
    DT_INTEGER      shift and go to state 10
    DT_REAL         shift and go to state 11
    DT_DOUBLE_PRECISION shift and go to state 12
    DT_LOGICAL      shift and go to state 13
    DT_CHARACTER    shift and go to state 14

    program_unit                   shift and go to state 15
    main_program                   shift and go to state 4
    function_subprogram            shift and go to state 5
    subroutine_subprogram          shift and go to state 6
    type_spec                      shift and go to state 8

state 3

    (2) program_unit_list -> program_unit .

    PROGRAM         reduce using rule 2 (program_unit_list -> program_unit .)
    SUBROUTINE      reduce using rule 2 (program_unit_list -> program_unit .)
    DT_INTEGER      reduce using rule 2 (program_unit_list -> program_unit .)
    DT_REAL         reduce using rule 2 (program_unit_list -> program_unit .)
    DT_DOUBLE_PRECISION reduce using rule 2 (program_unit_list -> program_unit .)
    DT_LOGICAL      reduce using rule 2 (program_unit_list -> program_unit .)
    DT_CHARACTER    reduce using rule 2 (program_unit_list -> program_unit .)
    $end            reduce using rule 2 (program_unit_list -> program_unit .)


state 4

    (4) program_unit -> main_program .

    PROGRAM         reduce using rule 4 (program_unit -> main_program .)
    SUBROUTINE      reduce using rule 4 (program_unit -> main_program .)
    DT_INTEGER      reduce using rule 4 (program_unit -> main_program .)
    DT_REAL         reduce using rule 4 (program_unit -> main_program .)
    DT_DOUBLE_PRECISION reduce using rule 4 (program_unit -> main_program .)
    DT_LOGICAL      reduce using rule 4 (program_unit -> main_program .)
    DT_CHARACTER    reduce using rule 4 (program_unit -> main_program .)
    $end            reduce using rule 4 (program_unit -> main_program .)


state 5

    (5) program_unit -> function_subprogram .

    PROGRAM         reduce using rule 5 (program_unit -> function_subprogram .)
    SUBROUTINE      reduce using rule 5 (program_unit -> function_subprogram .)
    DT_INTEGER      reduce using rule 5 (program_unit -> function_subprogram .)
    DT_REAL         reduce using rule 5 (program_unit -> function_subprogram .)
    DT_DOUBLE_PRECISION reduce using rule 5 (program_unit -> function_subprogram .)
    DT_LOGICAL      reduce using rule 5 (program_unit -> function_subprogram .)
    DT_CHARACTER    reduce using rule 5 (program_unit -> function_subprogram .)
    $end            reduce using rule 5 (program_unit -> function_subprogram .)


state 6

    (6) program_unit -> subroutine_subprogram .

    PROGRAM         reduce using rule 6 (program_unit -> subroutine_subprogram .)
    SUBROUTINE      reduce using rule 6 (program_unit -> subroutine_subprogram .)
    DT_INTEGER      reduce using rule 6 (program_unit -> subroutine_subprogram .)
    DT_REAL         reduce using rule 6 (program_unit -> subroutine_subprogram .)
    DT_DOUBLE_PRECISION reduce using rule 6 (program_unit -> subroutine_subprogram .)
    DT_LOGICAL      reduce using rule 6 (program_unit -> subroutine_subprogram .)
    DT_CHARACTER    reduce using rule 6 (program_unit -> subroutine_subprogram .)
    $end            reduce using rule 6 (program_unit -> subroutine_subprogram .)


state 7

    (7) main_program -> PROGRAM . IDENTIFIER body END

    IDENTIFIER      shift and go to state 16


state 8

    (8) function_subprogram -> type_spec . FUNCTION IDENTIFIER ( param_list ) body END

    FUNCTION        shift and go to state 17


state 9

    (9) subroutine_subprogram -> SUBROUTINE . IDENTIFIER ( param_list ) body END

    IDENTIFIER      shift and go to state 18


state 10

    (14) type_spec -> DT_INTEGER .

    FUNCTION        reduce using rule 14 (type_spec -> DT_INTEGER .)
    IDENTIFIER      reduce using rule 14 (type_spec -> DT_INTEGER .)


state 11

    (15) type_spec -> DT_REAL .

    FUNCTION        reduce using rule 15 (type_spec -> DT_REAL .)
    IDENTIFIER      reduce using rule 15 (type_spec -> DT_REAL .)


state 12

    (16) type_spec -> DT_DOUBLE_PRECISION .

    FUNCTION        reduce using rule 16 (type_spec -> DT_DOUBLE_PRECISION .)
    IDENTIFIER      reduce using rule 16 (type_spec -> DT_DOUBLE_PRECISION .)


state 13

    (17) type_spec -> DT_LOGICAL .

    FUNCTION        reduce using rule 17 (type_spec -> DT_LOGICAL .)
    IDENTIFIER      reduce using rule 17 (type_spec -> DT_LOGICAL .)


state 14

    (18) type_spec -> DT_CHARACTER .

    FUNCTION        reduce using rule 18 (type_spec -> DT_CHARACTER .)
    IDENTIFIER      reduce using rule 18 (type_spec -> DT_CHARACTER .)


state 15

    (3) program_unit_list -> program_unit_list program_unit .

    PROGRAM         reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    SUBROUTINE      reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    DT_INTEGER      reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    DT_REAL         reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    DT_DOUBLE_PRECISION reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    DT_LOGICAL      reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    DT_CHARACTER    reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)
    $end            reduce using rule 3 (program_unit_list -> program_unit_list program_unit .)


state 16

    (7) main_program -> PROGRAM IDENTIFIER . body END
    (10) body -> . declaration_section statement_section
    (11) declaration_section -> . empty
    (12) declaration_section -> . declaration_section declaration
    (126) empty -> .

    DT_INTEGER      reduce using rule 126 (empty -> .)
    DT_REAL         reduce using rule 126 (empty -> .)
    DT_DOUBLE_PRECISION reduce using rule 126 (empty -> .)
    DT_LOGICAL      reduce using rule 126 (empty -> .)
    DT_CHARACTER    reduce using rule 126 (empty -> .)
    LIT_INT         reduce using rule 126 (empty -> .)
    GOTO            reduce using rule 126 (empty -> .)
    IF              reduce using rule 126 (empty -> .)
    DO              reduce using rule 126 (empty -> .)
    CONTINUE        reduce using rule 126 (empty -> .)
    PRINT           reduce using rule 126 (empty -> .)
    READ            reduce using rule 126 (empty -> .)
    STOP            reduce using rule 126 (empty -> .)
    RETURN          reduce using rule 126 (empty -> .)
    CALL            reduce using rule 126 (empty -> .)
    IDENTIFIER      reduce using rule 126 (empty -> .)
    END             reduce using rule 126 (empty -> .)

    body                           shift and go to state 19
    declaration_section            shift and go to state 20
    empty                          shift and go to state 21

state 17

    (8) function_subprogram -> type_spec FUNCTION . IDENTIFIER ( param_list ) body END

    IDENTIFIER      shift and go to state 22


state 18

    (9) subroutine_subprogram -> SUBROUTINE IDENTIFIER . ( param_list ) body END

    (               shift and go to state 23


state 19

    (7) main_program -> PROGRAM IDENTIFIER body . END

    END             shift and go to state 24


state 20

    (10) body -> declaration_section . statement_section
    (12) declaration_section -> declaration_section . declaration
    (25) statement_section -> . empty
    (26) statement_section -> . statement_section statement
    (13) declaration -> . type_spec var_list
    (126) empty -> .
    (14) type_spec -> . DT_INTEGER
    (15) type_spec -> . DT_REAL
    (16) type_spec -> . DT_DOUBLE_PRECISION
    (17) type_spec -> . DT_LOGICAL
    (18) type_spec -> . DT_CHARACTER

    LIT_INT         reduce using rule 126 (empty -> .)
    GOTO            reduce using rule 126 (empty -> .)
    IF              reduce using rule 126 (empty -> .)
    DO              reduce using rule 126 (empty -> .)
    CONTINUE        reduce using rule 126 (empty -> .)
    PRINT           reduce using rule 126 (empty -> .)
    READ            reduce using rule 126 (empty -> .)
    STOP            reduce using rule 126 (empty -> .)
    RETURN          reduce using rule 126 (empty -> .)
    CALL            reduce using rule 126 (empty -> .)
    IDENTIFIER      reduce using rule 126 (empty -> .)
    END             reduce using rule 126 (empty -> .)
    DT_INTEGER      shift and go to state 10
    DT_REAL         shift and go to state 11
    DT_DOUBLE_PRECISION shift and go to state 12
    DT_LOGICAL      shift and go to state 13
    DT_CHARACTER    shift and go to state 14

    statement_section              shift and go to state 25
    declaration                    shift and go to state 26
    empty                          shift and go to state 27
    type_spec                      shift and go to state 28

state 21

    (11) declaration_section -> empty .

    DT_INTEGER      reduce using rule 11 (declaration_section -> empty .)
    DT_REAL         reduce using rule 11 (declaration_section -> empty .)
    DT_DOUBLE_PRECISION reduce using rule 11 (declaration_section -> empty .)
    DT_LOGICAL      reduce using rule 11 (declaration_section -> empty .)
    DT_CHARACTER    reduce using rule 11 (declaration_section -> empty .)
    LIT_INT         reduce using rule 11 (declaration_section -> empty .)
    GOTO            reduce using rule 11 (declaration_section -> empty .)
    IF              reduce using rule 11 (declaration_section -> empty .)
    DO              reduce using rule 11 (declaration_section -> empty .)
    CONTINUE        reduce using rule 11 (declaration_section -> empty .)
    PRINT           reduce using rule 11 (declaration_section -> empty .)
    READ            reduce using rule 11 (declaration_section -> empty .)
    STOP            reduce using rule 11 (declaration_section -> empty .)
    RETURN          reduce using rule 11 (declaration_section -> empty .)
    CALL            reduce using rule 11 (declaration_section -> empty .)
    IDENTIFIER      reduce using rule 11 (declaration_section -> empty .)
    END             reduce using rule 11 (declaration_section -> empty .)


state 22

    (8) function_subprogram -> type_spec FUNCTION IDENTIFIER . ( param_list ) body END

    (               shift and go to state 29


state 23

    (9) subroutine_subprogram -> SUBROUTINE IDENTIFIER ( . param_list ) body END
    (78) param_list -> . empty
    (79) param_list -> . param_list_mult
    (126) empty -> .
    (80) param_list_mult -> . IDENTIFIER
    (81) param_list_mult -> . param_list_mult , IDENTIFIER

    )               reduce using rule 126 (empty -> .)
    IDENTIFIER      shift and go to state 30

    param_list                     shift and go to state 31
    empty                          shift and go to state 32
    param_list_mult                shift and go to state 33

state 24

    (7) main_program -> PROGRAM IDENTIFIER body END .

    PROGRAM         reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    SUBROUTINE      reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    DT_INTEGER      reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    DT_REAL         reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    DT_DOUBLE_PRECISION reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    DT_LOGICAL      reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    DT_CHARACTER    reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)
    $end            reduce using rule 7 (main_program -> PROGRAM IDENTIFIER body END .)


state 25

    (10) body -> declaration_section statement_section .
    (26) statement_section -> statement_section . statement
    (27) statement -> . LIT_INT statement_body
    (28) statement -> . statement_body
    (29) statement_body -> . assignment_stmt
    (30) statement_body -> . goto_stmt
    (31) statement_body -> . if_stmt
    (32) statement_body -> . do_stmt
    (33) statement_body -> . continue_stmt
    (34) statement_body -> . print_stmt
    (35) statement_body -> . read_stmt
    (36) statement_body -> . stop_stmt
    (37) statement_body -> . return_stmt
    (38) statement_body -> . call_stmt
    (40) assignment_stmt -> . lvalue = expr
    (43) goto_stmt -> . GOTO LIT_INT
    (44) if_stmt -> . IF ( expr ) THEN statement_section ENDIF
    (45) if_stmt -> . IF ( expr ) THEN statement_section ELSE statement_section ENDIF
    (46) if_stmt -> . IF ( expr ) statement_body
    (47) do_stmt -> . DO LIT_INT IDENTIFIER = expr , expr do_body
    (48) do_stmt -> . DO LIT_INT IDENTIFIER = expr , expr , expr do_body
    (70) continue_stmt -> . CONTINUE
    (71) print_stmt -> . PRINT * , output_list
    (72) print_stmt -> . PRINT LIT_STRING , output_list
    (73) print_stmt -> . PRINT *
    (74) read_stmt -> . READ * , input_list
    (75) read_stmt -> . READ *
    (76) stop_stmt -> . STOP
    (77) return_stmt -> . RETURN
    (39) call_stmt -> . CALL IDENTIFIER ( arg_list )
    (41) lvalue -> . IDENTIFIER
    (42) lvalue -> . IDENTIFIER ( arg_list )

    END             reduce using rule 10 (body -> declaration_section statement_section .)
    LIT_INT         shift and go to state 35
    GOTO            shift and go to state 48
    IF              shift and go to state 49
    DO              shift and go to state 50
    CONTINUE        shift and go to state 52
    PRINT           shift and go to state 53
    READ            shift and go to state 54
    STOP            shift and go to state 55
    RETURN          shift and go to state 56
    CALL            shift and go to state 57
    IDENTIFIER      shift and go to state 51

    statement                      shift and go to state 34
    statement_body                 shift and go to state 36
    assignment_stmt                shift and go to state 37
    goto_stmt                      shift and go to state 38
    if_stmt                        shift and go to state 39
    do_stmt                        shift and go to state 40
    continue_stmt                  shift and go to state 41
    print_stmt                     shift and go to state 42
    read_stmt                      shift and go to state 43
    stop_stmt                      shift and go to state 44
    return_stmt                    shift and go to state 45
    call_stmt                      shift and go to state 46
    lvalue                         shift and go to state 47

state 26

    (12) declaration_section -> declaration_section declaration .

    DT_INTEGER      reduce using rule 12 (declaration_section -> declaration_section declaration .)
    DT_REAL         reduce using rule 12 (declaration_section -> declaration_section declaration .)
    DT_DOUBLE_PRECISION reduce using rule 12 (declaration_section -> declaration_section declaration .)
    DT_LOGICAL      reduce using rule 12 (declaration_section -> declaration_section declaration .)
    DT_CHARACTER    reduce using rule 12 (declaration_section -> declaration_section declaration .)
    LIT_INT         reduce using rule 12 (declaration_section -> declaration_section declaration .)
    GOTO            reduce using rule 12 (declaration_section -> declaration_section declaration .)
    IF              reduce using rule 12 (declaration_section -> declaration_section declaration .)
    DO              reduce using rule 12 (declaration_section -> declaration_section declaration .)
    CONTINUE        reduce using rule 12 (declaration_section -> declaration_section declaration .)
    PRINT           reduce using rule 12 (declaration_section -> declaration_section declaration .)
    READ            reduce using rule 12 (declaration_section -> declaration_section declaration .)
    STOP            reduce using rule 12 (declaration_section -> declaration_section declaration .)
    RETURN          reduce using rule 12 (declaration_section -> declaration_section declaration .)
    CALL            reduce using rule 12 (declaration_section -> declaration_section declaration .)
    IDENTIFIER      reduce using rule 12 (declaration_section -> declaration_section declaration .)
    END             reduce using rule 12 (declaration_section -> declaration_section declaration .)


state 27

    (25) statement_section -> empty .

    LIT_INT         reduce using rule 25 (statement_section -> empty .)
    GOTO            reduce using rule 25 (statement_section -> empty .)
    IF              reduce using rule 25 (statement_section -> empty .)
    DO              reduce using rule 25 (statement_section -> empty .)
    CONTINUE        reduce using rule 25 (statement_section -> empty .)
    PRINT           reduce using rule 25 (statement_section -> empty .)
    READ            reduce using rule 25 (statement_section -> empty .)
    STOP            reduce using rule 25 (statement_section -> empty .)
    RETURN          reduce using rule 25 (statement_section -> empty .)
    CALL            reduce using rule 25 (statement_section -> empty .)
    IDENTIFIER      reduce using rule 25 (statement_section -> empty .)
    END             reduce using rule 25 (statement_section -> empty .)
    ENDIF           reduce using rule 25 (statement_section -> empty .)
    ELSE            reduce using rule 25 (statement_section -> empty .)


state 28

    (13) declaration -> type_spec . var_list
    (19) var_list -> . var_decl
    (20) var_list -> . var_list , var_decl
    (21) var_decl -> . IDENTIFIER
    (22) var_decl -> . IDENTIFIER ( dim_list )

    IDENTIFIER      shift and go to state 60

    var_list                       shift and go to state 58
    var_decl                       shift and go to state 59

state 29

    (8) function_subprogram -> type_spec FUNCTION IDENTIFIER ( . param_list ) body END
    (78) param_list -> . empty
    (79) param_list -> . param_list_mult
    (126) empty -> .
    (80) param_list_mult -> . IDENTIFIER
    (81) param_list_mult -> . param_list_mult , IDENTIFIER

    )               reduce using rule 126 (empty -> .)
    IDENTIFIER      shift and go to state 30

    param_list                     shift and go to state 61
    empty                          shift and go to state 32
    param_list_mult                shift and go to state 33

state 30

    (80) param_list_mult -> IDENTIFIER .

    ,               reduce using rule 80 (param_list_mult -> IDENTIFIER .)
    )               reduce using rule 80 (param_list_mult -> IDENTIFIER .)


state 31

    (9) subroutine_subprogram -> SUBROUTINE IDENTIFIER ( param_list . ) body END

    )               shift and go to state 62


state 32

    (78) param_list -> empty .

    )               reduce using rule 78 (param_list -> empty .)


state 33

    (79) param_list -> param_list_mult .
    (81) param_list_mult -> param_list_mult . , IDENTIFIER

    )               reduce using rule 79 (param_list -> param_list_mult .)
    ,               shift and go to state 63


state 34

    (26) statement_section -> statement_section statement .

    LIT_INT         reduce using rule 26 (statement_section -> statement_section statement .)
    GOTO            reduce using rule 26 (statement_section -> statement_section statement .)
    IF              reduce using rule 26 (statement_section -> statement_section statement .)
    DO              reduce using rule 26 (statement_section -> statement_section statement .)
    CONTINUE        reduce using rule 26 (statement_section -> statement_section statement .)
    PRINT           reduce using rule 26 (statement_section -> statement_section statement .)
    READ            reduce using rule 26 (statement_section -> statement_section statement .)
    STOP            reduce using rule 26 (statement_section -> statement_section statement .)
    RETURN          reduce using rule 26 (statement_section -> statement_section statement .)
    CALL            reduce using rule 26 (statement_section -> statement_section statement .)
    IDENTIFIER      reduce using rule 26 (statement_section -> statement_section statement .)
    END             reduce using rule 26 (statement_section -> statement_section statement .)
    ENDIF           reduce using rule 26 (statement_section -> statement_section statement .)
    ELSE            reduce using rule 26 (statement_section -> statement_section statement .)


state 35

    (27) statement -> LIT_INT . statement_body
    (29) statement_body -> . assignment_stmt
    (30) statement_body -> . goto_stmt
    (31) statement_body -> . if_stmt
    (32) statement_body -> . do_stmt
    (33) statement_body -> . continue_stmt
    (34) statement_body -> . print_stmt
    (35) statement_body -> . read_stmt
    (36) statement_body -> . stop_stmt
    (37) statement_body -> . return_stmt
    (38) statement_body -> . call_stmt
    (40) assignment_stmt -> . lvalue = expr
    (43) goto_stmt -> . GOTO LIT_INT
    (44) if_stmt -> . IF ( expr ) THEN statement_section ENDIF
    (45) if_stmt -> . IF ( expr ) THEN statement_section ELSE statement_section ENDIF
    (46) if_stmt -> . IF ( expr ) statement_body
    (47) do_stmt -> . DO LIT_INT IDENTIFIER = expr , expr do_body
    (48) do_stmt -> . DO LIT_INT IDENTIFIER = expr , expr , expr do_body
    (70) continue_stmt -> . CONTINUE
    (71) print_stmt -> . PRINT * , output_list
    (72) print_stmt -> . PRINT LIT_STRING , output_list
    (73) print_stmt -> . PRINT *
    (74) read_stmt -> . READ * , input_list
    (75) read_stmt -> . READ *
    (76) stop_stmt -> . STOP
    (77) return_stmt -> . RETURN
    (39) call_stmt -> . CALL IDENTIFIER ( arg_list )
    (41) lvalue -> . IDENTIFIER
    (42) lvalue -> . IDENTIFIER ( arg_list )

    GOTO            shift and go to state 48
    IF              shift and go to state 49
    DO              shift and go to state 50
    CONTINUE        shift and go to state 52
    PRINT           shift and go to state 53
    READ            shift and go to state 54
    STOP            shift and go to state 55
    RETURN          shift and go to state 56
    CALL            shift and go to state 57
    IDENTIFIER      shift and go to state 51

    statement_body                 shift and go to state 64
    assignment_stmt                shift and go to state 37
    goto_stmt                      shift and go to state 38
    if_stmt                        shift and go to state 39
    do_stmt                        shift and go to state 40
    continue_stmt                  shift and go to state 41
    print_stmt                     shift and go to state 42
    read_stmt                      shift and go to state 43
    stop_stmt                      shift and go to state 44
    return_stmt                    shift and go to state 45
    call_stmt                      shift and go to state 46
    lvalue                         shift and go to state 47

state 36

    (28) statement -> statement_body .

    LIT_INT         reduce using rule 28 (statement -> statement_body .)
    GOTO            reduce using rule 28 (statement -> statement_body .)
    IF              reduce using rule 28 (statement -> statement_body .)
    DO              reduce using rule 28 (statement -> statement_body .)
    CONTINUE        reduce using rule 28 (statement -> statement_body .)
    PRINT           reduce using rule 28 (statement -> statement_body .)
    READ            reduce using rule 28 (statement -> statement_body .)
    STOP            reduce using rule 28 (statement -> statement_body .)
    RETURN          reduce using rule 28 (statement -> statement_body .)
    CALL            reduce using rule 28 (statement -> statement_body .)
    IDENTIFIER      reduce using rule 28 (statement -> statement_body .)
    END             reduce using rule 28 (statement -> statement_body .)
    ENDIF           reduce using rule 28 (statement -> statement_body .)
    ELSE            reduce using rule 28 (statement -> statement_body .)


state 37

    (29) statement_body -> assignment_stmt .
